<resources>
    <string name="app_name">AndrxDemo</string>
    <string name="action_switch">switch</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="testToB">TestB</string>
    <string name="deepLink">deepLink</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="home">Home</string>
    <string name="major">Major</string>
    <string name="question">Question</string>
    <string name="intent">intent</string>
    <string name="intent_des">intent</string>
    <string name="search">search</string>
    <string name="animate">animate</string>
    <string name="searchHint">please input search content</string>
</resources>