<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragmentTest">

    <fragment
        android:id="@+id/FirstFragmentTest"
        android:name="com.zd.andrdemo.navigation.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragmentTest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragmentTest"
        android:name="com.zd.andrdemo.navigation.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragmentTest" />
    </fragment>

    <activity
        android:id="@+id/activityTestB"
        android:name="com.zd.andrdemo.navigation.TestBActivity"
        android:label="TestBActivity"
        tools:layout="@layout/activity_test_b" />

    <fragment
        android:id="@+id/ThirdFragmentTest"
        android:name="com.zd.andrdemo.navigation.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_second">
        <deepLink app:uri="http://www.xixi.com/test" />
    </fragment>
</navigation>